--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
     <div class="col-6">
       <input
         class="form-control"
-        maxLength="25"
+        maxLength="60s"
         bigCurrencyMask
         [(ngModel)]="ngModelExample"
         [options]="{
@@ -38,7 +38,7 @@
           suffix: ' T',
           thousands: '.',
           decimal: ',',
-          precision: 3,
+          precision: 6,
           align: 'left',
           allowNegative: true
         }"
